# django-webstats

./: pyproject.toml  setup.cfg
