[metadata]
name = django-webstats 
version = 0.1.0
author = Harlin Seritt 
author_email = harlin.seritt@gmail.com 
description = A simple view stats package for Django 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hseritt/django-webstats/
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
install_requires =
    Django>=5.0.4

[options.packages.find]
exclude =
    example_project
    example_project.*

